--- a/ElevenNote.Data/ElevenNote.Data.csproj
+++ b/ElevenNote.Data/ElevenNote.Data.csproj
@@ -53,12 +53,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201711142108207_InitialCreate.cs" />
+    <Compile Include="Migrations\201711142108207_InitialCreate.Designer.cs">
+      <DependentUpon>201711142108207_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711151835343_AddNoteEntity.cs" />
+    <Compile Include="Migrations\201711151835343_AddNoteEntity.Designer.cs">
+      <DependentUpon>201711151835343_AddNoteEntity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="NoteEntity.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201711142108207_InitialCreate.resx">
+      <DependentUpon>201711142108207_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711151835343_AddNoteEntity.resx">
+      <DependentUpon>201711151835343_AddNoteEntity.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
