--- a/ElevenNote.Models/ElevenNote.Models.csproj
+++ b/ElevenNote.Models/ElevenNote.Models.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="MaxLengthAttribute.cs" />
     <Compile Include="NoteCreateModel.cs" />
+    <Compile Include="NoteDetailModel.cs" />
     <Compile Include="NoteListItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequiredAttribute.cs" />
