--- a/ElevenNote.Models/ElevenNote.Models.csproj
+++ b/ElevenNote.Models/ElevenNote.Models.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,9 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MaxLengthAttribute.cs" />
     <Compile Include="NoteCreateModel.cs" />
     <Compile Include="NoteDetailModel.cs" />
+    <Compile Include="NoteEditModel.cs" />
     <Compile Include="NoteListItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequiredAttribute.cs" />
